--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
       "@/*": ["./*"],
       "@/layout/*": ["components/layout/*"],
       "@/vehicle/*": ["components/vehicle/*"],
+      "@/dashboard/*": ["components/dashboard/*"],
       "@/store/*": ["store/*"]
     }
   },
