--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.6",
-    "@apollo/server": "^4.3.2",
-    "@headlessui/react": "^1.7.8",
-    "@heroicons/react": "^2.0.14",
-    "@next/font": "13.1.6",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/tooltip": "^0.80.0",
+    "@apollo/client": "^3.7.6",
+    "@apollo/server": "^4.3.2",
+    "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
+    "@next/font": "13.1.6",
     "@prisma/client": "^4.12.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@tanstack/react-table": "^8.8.4",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/json-diff": "^0.9.1",
@@ -53,7 +54,7 @@
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
     "js-file-download": "^0.4.12",
-    "json-diff": "^1.0.0",
+    "json-diff": "^1.0.3",
     "jsonwebtoken": "^9.0.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
@@ -74,6 +75,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
+    "react-table": "^7.8.0",
     "react-tooltip": "^4.4.3",
     "sharp": "^0.31.3",
     "swr": "^2.0.3",
