--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "insurance",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +12,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.11",
+    "@apollo/server": "^4.3.2",
+    "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
+    "@next/font": "13.1.6",
+    "@nivo/axes": "^0.80.0",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/tooltip": "^0.80.0",
-    "@apollo/client": "^3.7.6",
-    "@apollo/server": "^4.3.2",
-    "@headlessui/react": "^1.7.8",
-    "@heroicons/react": "^2.0.14",
-    "@next/font": "13.1.6",
     "@prisma/client": "^4.12.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -64,7 +68,7 @@
     "moment": "^2.29.4",
     "ms": "^2.1.3",
     "next": "13.1.6",
-    "next-auth": "^4.19.1",
+    "next-auth": "^4.21.1",
     "next-connect": "^0.13.0",
     "nexus": "^1.3.0",
     "nprogress": "^0.2.0",
@@ -77,11 +81,14 @@
     "react-paginate": "^8.1.4",
     "react-table": "^7.8.0",
     "react-tooltip": "^4.4.3",
+    "recharts": "^2.5.0",
     "sharp": "^0.31.3",
     "swr": "^2.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prisma": "^4.12.0",
