--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-table": "^8.8.4",
+    "@tremor/react": "^2.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/json-diff": "^0.9.1",
