--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@nivo/line": "^0.80.0",
     "@nivo/pie": "^0.80.0",
     "@nivo/tooltip": "^0.80.0",
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.13.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-table": "^8.8.4",
     "@tremor/react": "^2.2.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.3",
+    "@types/express-slow-down": "^1.3.2",
     "@types/json-diff": "^0.9.1",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/micro-cors": "^0.1.3",
@@ -41,6 +42,8 @@
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "18.0.10",
     "@types/react-paginate": "^7.1.1",
+    "@upstash/ratelimit": "^0.4.2",
+    "@upstash/redis": "^1.20.4",
     "apollo-server-micro": "^3.11.1",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
@@ -48,6 +51,8 @@
     "date-fns": "^2.29.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "express-rate-limit": "^6.7.0",
+    "express-slow-down": "^1.6.0",
     "fast-xml-parser": "^4.1.2",
     "formik": "^2.2.9",
     "graphql": "^16.6.0",
@@ -64,6 +69,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "lodash": "^4.17.21",
+    "lru-cache": "^9.1.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
     "moment": "^2.29.4",
@@ -86,13 +92,14 @@
     "sharp": "^0.31.3",
     "swr": "^2.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "prisma": "^4.12.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.2.4"
   }
 }
