--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/react": "18.0.27",
     "@types/react-csv": "^1.1.3",
     "@types/react-dom": "18.0.10",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@types/react-paginate": "^7.1.1",
     "@upstash/ratelimit": "^0.4.2",
     "@upstash/redis": "^1.20.4",
@@ -77,6 +78,7 @@
     "next": "13.1.6",
     "next-auth": "^4.21.1",
     "next-connect": "^0.13.0",
+    "next-safe": "^3.4.1",
     "nexus": "^1.3.0",
     "nprogress": "^0.2.0",
     "papaparse": "^5.3.2",
@@ -84,6 +86,7 @@
     "react-csv": "^2.2.2",
     "react-datetime": "^3.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
     "react-table": "^7.8.0",
